--- a/index.html
+++ b/index.html
@@ -58,6 +58,9 @@
             </table>
         </div>
     </div>
+    <footer>
+        <p>Desenvolvido por Gabrielly Lorraynne</p>
+    </footer>
 
     <script src="script.js"></script>
 </body>
