--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
             </table>
         </div>
     </div>
-    <footer>
+    <!-- <footer>
         <p>Desenvolvido por Gabrielly Lorraynne</p>
-    </footer>
+    </footer> -->
 
     <script src="script.js"></script>
 </body>
