--- a/index.html
+++ b/index.html
@@ -16,13 +16,13 @@
                 <img src="assets/imagens/calendario.png" alt="Imagem de Calendario">
             </div>
             <div class="cabecalho__titulo">
-                <h1>Minha agenda de contatos</h1>
+                <h1>Agenda de contatos</h1>
             </div>
         </div>
         <hr>
         <div class="formulario">
             <h2>Adicionar novo Contato</h2>
-            <form action="">
+            <form >
                 <label for="nome">Nome</label>
                 <input type="text" name="nome" id="nome" required placeholder="Nome...">
                 <label for="telefone">Telefone</label>
@@ -58,9 +58,6 @@
             </table>
         </div>
     </div>
-    <!-- <footer>
-        <p>Desenvolvido por Gabrielly Lorraynne</p>
-    </footer> -->
 
     <script src="script.js"></script>
 </body>
